@@ -2,6 +2,7 @@
 v3.2.13-git
 -----------
 
+[jan] Convert vacation rules in preference backend from Ingo < 2.0.
 [jan] Fix some edge cases with Sieve vacation rules with date limits (Bug
       #14486).
 
